--- a/week2/day1.ipynb
+++ b/week2/day1.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "de23bb9e-37c5-4377-9a82-d7b6c648eeb6",
    "metadata": {},
    "outputs": [],
@@ -93,12 +93,13 @@
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "import anthropic\n",
-    "from IPython.display import Markdown, display, update_display"
+    "from IPython.display import Markdown, display, update_display\n",
+    "import ollama"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f0a8ab2b-6134-4104-a1bc-c3cd7ea4cd36",
    "metadata": {},
    "outputs": [],
@@ -112,33 +113,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1179b4c5-cd1f-4131-a876-4c9f3f38d2ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anthropic API Key exists and begins sk-ant-\n"
+     ]
+    }
+   ],
    "source": [
     "# Load environment variables in a file called .env\n",
     "# Print the key prefixes to help with any debugging\n",
     "\n",
     "load_dotenv()\n",
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
     "anthropic_api_key = os.getenv('ANTHROPIC_API_KEY')\n",
-    "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
+    "# openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "# google_api_key = os.getenv('GOOGLE_API_KEY')\n",
     "\n",
-    "if openai_api_key:\n",
-    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
-    "else:\n",
-    "    print(\"OpenAI API Key not set\")\n",
-    "    \n",
     "if anthropic_api_key:\n",
     "    print(f\"Anthropic API Key exists and begins {anthropic_api_key[:7]}\")\n",
     "else:\n",
     "    print(\"Anthropic API Key not set\")\n",
     "\n",
-    "if google_api_key:\n",
-    "    print(f\"Google API Key exists and begins {google_api_key[:8]}\")\n",
-    "else:\n",
-    "    print(\"Google API Key not set\")"
+    "    \n",
+    "# if openai_api_key:\n",
+    "#     print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
+    "# else:\n",
+    "#     print(\"OpenAI API Key not set\")\n",
+    "\n",
+    "# if google_api_key:\n",
+    "#     print(f\"Google API Key exists and begins {google_api_key[:8]}\")\n",
+    "# else:\n",
+    "#     print(\"Google API Key not set\")"
    ]
   },
   {
@@ -149,8 +159,7 @@
    "outputs": [],
    "source": [
     "# Connect to OpenAI, Anthropic\n",
-    "\n",
-    "openai = OpenAI()\n",
+    "# openai = OpenAI()\n",
     "\n",
     "claude = anthropic.Anthropic()"
    ]
@@ -190,7 +199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "8f2707a2-e953-4be6-99c8-714df576b19d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL_LLAMA = 'llama3.2'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "378a0296-59a2-45c6-82eb-941344d3eeff",
    "metadata": {},
    "outputs": [],
@@ -201,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f4d56a0f-2a3d-484d-9344-0efa6862aff4",
    "metadata": {},
    "outputs": [],
@@ -214,15 +233,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3b3879b6-9a55-4fed-a18c-1ea2edfaf397",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # GPT-3.5-Turbo\n",
+    "\n",
+    "# completion = openai.chat.completions.create(model='gpt-3.5-turbo', messages=prompts)\n",
+    "# print(completion.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2cbe715c-5ffb-4a1f-9b06-1017a5093d66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's one:\n",
+      "\n",
+      "Why did the data scientist break up with his girlfriend?\n",
+      "\n",
+      "Because he realized he was just trying to model her behavior, but she kept changing variables on him!\n",
+      "\n",
+      "(get it? variables... haha)\n",
+      "\n",
+      "But seriously, I hope that made your day a little brighter and your models a little more accurate!\n"
+     ]
+    }
+   ],
+   "source": [
     "# GPT-3.5-Turbo\n",
     "\n",
-    "completion = openai.chat.completions.create(model='gpt-3.5-turbo', messages=prompts)\n",
-    "print(completion.choices[0].message.content)"
+    "completion = ollama.chat(model=MODEL_LLAMA, messages=prompts)\n",
+    "print(completion.message.content)"
    ]
   },
   {
