--- a/week1/solutions/day2 SOLUTION.ipynb
+++ b/week1/solutions/day2 SOLUTION.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4e2a9393-7767-488e-a8bf-27c12dca35bd",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "29ddd15d-a3c5-4f4e-a678-873f56162724",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c5e793b2-6775-426a-a139-4848291d0463",
    "metadata": {},
    "outputs": [],
@@ -91,10 +91,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2ef960cf-6dc2-4cda-afb3-b38be12f4c97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Home - Edward Donner\n",
+      "Home\n",
+      "Outsmart\n",
+      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
+      "About\n",
+      "Posts\n",
+      "Well, hi there.\n",
+      "I’m Ed. I like writing code and experimenting with LLMs, and hopefully you’re here because you do too. I also enjoy DJing (but I’m badly out of practice), amateur electronic music production (\n",
+      "very\n",
+      "amateur) and losing myself in\n",
+      "Hacker News\n",
+      ", nodding my head sagely to things I only half understand.\n",
+      "I’m the co-founder and CTO of\n",
+      "Nebula.io\n",
+      ". We’re applying AI to a field where it can make a massive, positive impact: helping people discover their potential and pursue their reason for being. Recruiters use our product today to source, understand, engage and manage talent. I’m previously the founder and CEO of AI startup untapt,\n",
+      "acquired in 2021\n",
+      ".\n",
+      "We work with groundbreaking, proprietary LLMs verticalized for talent, we’ve\n",
+      "patented\n",
+      "our matching model, and our award-winning platform has happy customers and tons of press coverage.\n",
+      "Connect\n",
+      "with me for more!\n",
+      "December 21, 2024\n",
+      "Welcome, SuperDataScientists!\n",
+      "November 13, 2024\n",
+      "Mastering AI and LLM Engineering – Resources\n",
+      "October 16, 2024\n",
+      "From Software Engineer to AI Data Scientist – resources\n",
+      "August 6, 2024\n",
+      "Outsmart LLM Arena – a battle of diplomacy and deviousness\n",
+      "Navigation\n",
+      "Home\n",
+      "Outsmart\n",
+      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
+      "About\n",
+      "Posts\n",
+      "Get in touch\n",
+      "ed [at] edwarddonner [dot] com\n",
+      "www.edwarddonner.com\n",
+      "Follow me\n",
+      "LinkedIn\n",
+      "Twitter\n",
+      "Facebook\n",
+      "Subscribe to newsletter\n",
+      "Type your email…\n",
+      "Subscribe\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's try one out\n",
     "\n",
@@ -123,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "abdb8417-c5dc-44bc-9bee-2e059d162699",
    "metadata": {},
    "outputs": [],
@@ -137,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f0275b1b-7cfe-4f9d-abfa-7650d378da0c",
    "metadata": {},
    "outputs": [],
@@ -171,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0134dfa4-8299-48b5-b444-f2a8c3403c88",
    "metadata": {},
    "outputs": [],
@@ -195,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "905b9919-aba7-45b5-ae65-81b3d1d78e34",
    "metadata": {},
    "outputs": [],
@@ -211,17 +264,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "05e38d41-dfa4-4b20-9c96-c46ea75d9fb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'**Website Summary**\\n\\n* The website is a personal blog and the homepage of Edward Donner, highlighting his interests in AI, LLMs, coding, music production, and DJing.\\n* He also mentions being the co-founder and CTO of Nebula.io, an AI startup working on talent management and sourcing.\\n\\n**News/Announcements**\\n\\n* **December 21, 2024**: \"Welcome, SuperDataScientists!\" - likely a newsletter or blog post announcing something new.\\n* **November 13, 2024**: \"Mastering AI and LLM Engineering – Resources\" - suggests a resource article or guide for readers interested in learning more about mastering AI and LLM engineering.\\n* **October 16, 2024**: \"From Software Engineer to AI Data Scientist – resources\" - implies an article or guide on how to transition into an AI data scientist role.\\n* **August 6, 2024**: \"Outsmart LLM Arena – a battle of diplomacy and deviousness\" - describes the \"Outsmart LLM Arena\", an arena where LLMs are pitted against each other in a battle of diplomacy and deviousness.\\n\\nNote: The exact content of these news/announcements is not available as they are linked to external platforms (e.g. newsletter, LinkedIn).'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "summarize(\"https://edwarddonner.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3d926d59-450e-4609-92ba-2d6f244f1342",
    "metadata": {},
    "outputs": [],
@@ -235,10 +299,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3018853a-445f-41ff-9560-d925d1774b2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Summary of Edward Donner's Website\n",
+       "\n",
+       "## About the Author and his Work\n",
+       "\n",
+       "Edward Donner is a writer, engineer, and entrepreneur who focuses on applying AI to help people discover their potential. He co-founded Nebula.io, which uses AI to source, understand, engage, and manage talent for recruiters.\n",
+       "\n",
+       "### Recent News and Announcements\n",
+       "\n",
+       "* December 21, 2024: Welcome message for SuperDataScientists\n",
+       "* November 13, 2024: Announcement of a new resource page on mastering AI and LLM engineering\n",
+       "* October 16, 2024: Publication of resources for transitioning from software engineer to AI data scientist\n",
+       "* August 6, 2024: Introduction to the Outsmart LLM Arena, a battle of diplomacy and deviousness where LLMs compete against each other\n",
+       "\n",
+       "## Links and Contact Information\n",
+       "\n",
+       "* Follow Edward Donner on:\n",
+       "\t+ LinkedIn\n",
+       "\t+ Twitter\n",
+       "\t+ Facebook\n",
+       "* Subscribe to his newsletter by typing your email address in the provided field\n",
+       "* Visit his website: [www.edwarddonner.com](http://www.edwarddonner.com)\n",
+       "* Email him directly at ed@edwarddonner.com"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_summary(\"https://edwarddonner.com\")"
    ]
@@ -261,20 +359,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "45d83403-a24c-44b5-84ac-961449b4008f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "It appears that you have provided a large amount of text, but there doesn't seem to be any specific topic or question associated with it. However, I can try to help you find something if you'd like.\n",
+       "\n",
+       "If you're looking for information on a particular topic, feel free to let me know and I'll do my best to assist you. If not, here are some possible ways to get started:\n",
+       "\n",
+       "*   Ask me a question\n",
+       "*   Provide more context or clarify what you're looking for\n",
+       "*   Browse through the provided text and see if anything catches your attention"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_summary(\"https://cnn.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "75e9fd40-b354-4341-991e-863ef2e59db7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Website Summary\n",
+       "\n",
+       "**Company Overview**\n",
+       "Anthropic is an AI safety and research company based in San Francisco, founded by Claude experts. The team has experience across multiple disciplines, including machine learning (ML), physics, policy, and product.\n",
+       "\n",
+       "### Recent Announcements\n",
+       "\n",
+       "* **Model Updates**: Introducing computer use, a new version of the Claude 3.5 Sonnet model.\n",
+       "* **Alignment Research**: Constitutional AI: Harmlessness from AI Feedback, released on December 15, 2022.\n",
+       "* **Core Views on AI Safety**: When, Why, What, and How, announced on March 8, 2023.\n",
+       "\n",
+       "### Products and Services\n",
+       "\n",
+       "* Claude is an AI research and development platform that offers:\n",
+       "\t+ **Claude for Enterprise**: A customized version of the platform for business use.\n",
+       "\t+ **API**: Build AI-powered applications and custom experiences with Claude's API.\n",
+       "\t+ **Claude AI Models**: Research models like Claude 3.5 Sonnet, available for download.\n",
+       "\n",
+       "### News\n",
+       "\n",
+       "* Visit the news section to stay up-to-date on Anthropic's latest announcements and updates.\n",
+       "\n",
+       "### Contact Information\n",
+       "\n",
+       "* Learn more about Anthropic's team, pricing, research efforts, company history, careers, and contact information.\n",
+       "* Follow Anthropic on social media platforms:\n",
+       "\t+ Twitter\n",
+       "\t+ LinkedIn\n",
+       "\t+ YouTube"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_summary(\"https://anthropic.com\")"
    ]
