--- a/week2/day1.ipynb
+++ b/week2/day1.ipynb
@@ -121,7 +121,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Anthropic API Key exists and begins sk-ant-\n"
+      "Anthropic API Key not set\n",
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "Google API Key not set\n"
      ]
     }
    ],
@@ -131,8 +133,8 @@
     "\n",
     "load_dotenv()\n",
     "anthropic_api_key = os.getenv('ANTHROPIC_API_KEY')\n",
-    "# openai_api_key = os.getenv('OPENAI_API_KEY')\n",
-    "# google_api_key = os.getenv('GOOGLE_API_KEY')\n",
+    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
     "\n",
     "if anthropic_api_key:\n",
     "    print(f\"Anthropic API Key exists and begins {anthropic_api_key[:7]}\")\n",
@@ -140,20 +142,20 @@
     "    print(\"Anthropic API Key not set\")\n",
     "\n",
     "    \n",
-    "# if openai_api_key:\n",
-    "#     print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
-    "# else:\n",
-    "#     print(\"OpenAI API Key not set\")\n",
+    "if openai_api_key:\n",
+    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
+    "else:\n",
+    "    print(\"OpenAI API Key not set\")\n",
     "\n",
-    "# if google_api_key:\n",
-    "#     print(f\"Google API Key exists and begins {google_api_key[:8]}\")\n",
-    "# else:\n",
-    "#     print(\"Google API Key not set\")"
+    "if google_api_key:\n",
+    "    print(f\"Google API Key exists and begins {google_api_key[:8]}\")\n",
+    "else:\n",
+    "    print(\"Google API Key not set\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "797fe7b0-ad43-42d2-acf0-e4f309b112f0",
    "metadata": {},
    "outputs": [],
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "425ed580-808d-429b-85b0-6cba50ca1d0c",
    "metadata": {},
    "outputs": [],
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "8f2707a2-e953-4be6-99c8-714df576b19d",
    "metadata": {},
    "outputs": [],
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "378a0296-59a2-45c6-82eb-941344d3eeff",
    "metadata": {},
    "outputs": [],
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "f4d56a0f-2a3d-484d-9344-0efa6862aff4",
    "metadata": {},
    "outputs": [],
@@ -233,20 +235,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "3b3879b6-9a55-4fed-a18c-1ea2edfaf397",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # GPT-3.5-Turbo\n",
-    "\n",
+    "openai = OpenAI()\n",
     "# completion = openai.chat.completions.create(model='gpt-3.5-turbo', messages=prompts)\n",
     "# print(completion.choices[0].message.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "id": "464d2b7a-b0bd-4a5b-9399-44c6437c7d6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why did the data scientist bring a ladder to work?\n",
+      "\n",
+      "Because they heard the job had a lot of high-level concepts!\n"
+     ]
+    }
+   ],
+   "source": [
+    "completion = openai.chat.completions.create(model='gpt-4o-mini', messages=prompts)\n",
+    "print(completion.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "2cbe715c-5ffb-4a1f-9b06-1017a5093d66",
    "metadata": {},
    "outputs": [
@@ -258,11 +281,11 @@
       "\n",
       "Why did the data scientist break up with his girlfriend?\n",
       "\n",
-      "Because he realized he was just trying to model her behavior, but she kept changing variables on him!\n",
+      "Because he realized he was in a statistically insignificant relationship! (get it?)\n",
       "\n",
-      "(get it? variables... haha)\n",
+      "But seriously, it's like this: in the world of data science, relationships are often all about correlation vs. causation... and sometimes you just need to take a step back and re-analyze your feelings!\n",
       "\n",
-      "But seriously, I hope that made your day a little brighter and your models a little more accurate!\n"
+      "(Sorry, I know it's a bit of a \"model\" joke, but I hope it made some data-savvy folks laugh!)\n"
      ]
     }
    ],
@@ -275,10 +298,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "3d2d6beb-1b81-466f-8ed1-40bf51e7adbf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why did the data scientist break up with the statistician?\n",
+      "\n",
+      "Because she found him too mean!\n"
+     ]
+    }
+   ],
    "source": [
     "# GPT-4o-mini\n",
     "# Temperature setting controls creativity\n",
@@ -293,15 +326,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f1f54beb-823f-4301-98cb-8b9a49f4ce26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Why did the data scientist bring a ladder to work?\n",
+      "\n",
+      "Because they wanted to reach new heights in their analysis!\n"
+     ]
+    }
+   ],
    "source": [
     "# GPT-4o\n",
     "\n",
     "completion = openai.chat.completions.create(\n",
-    "    model='gpt-4o',\n",
+    "    model='gpt-4o-mini',\n",
     "    messages=prompts,\n",
     "    temperature=0.4\n",
     ")\n",
@@ -400,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "83ddb483-4f57-4668-aeea-2aade3a9e573",
    "metadata": {},
    "outputs": [],
@@ -415,10 +458,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "749f50ab-8ccd-4502-a521-895c3f0808a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Deciding if a business problem is suitable for a Large Language Model (LLM) solution involves evaluating several key factors. Below are some considerations to guide your decision-making process:\n",
+       "\n",
+       "### 1. Nature of the Problem\n",
+       "- **Text-Intensive Tasks**: LLMs are well-suited for tasks that involve generating, understanding, or processing large amounts of text. Consider if the problem involves activities like content creation, summarization, translation, or question answering.\n",
+       "- **Complex Language Understanding**: If the problem requires understanding nuances in language, such as tone, intent, or context, LLMs can be effective.\n",
+       "\n",
+       "### 2. Data Availability\n",
+       "- **Rich Textual Data**: Ensure that you have ample and relevant text data for the LLM to work with. The quality and quantity of data will directly impact the model's performance.\n",
+       "- **Diverse Dataset**: Having a diverse dataset helps the LLM generalize better, especially if the problem spans various topics or industries.\n",
+       "\n",
+       "### 3. Scalability\n",
+       "- **Volume of Text**: Consider if the problem involves processing large volumes of text data, which would benefit from the scalability of LLMs.\n",
+       "- **Future Expansion**: If the solution needs to scale across different languages or regions, LLMs can be a versatile choice.\n",
+       "\n",
+       "### 4. Performance Requirements\n",
+       "- **Accuracy vs. Creativity**: Determine if the solution prioritizes accuracy or creative generation. LLMs are generally strong in creative tasks but might require fine-tuning for high-accuracy applications.\n",
+       "- **Speed**: Assess the required processing speed and whether the model can deliver results within the acceptable timeframe.\n",
+       "\n",
+       "### 5. Cost Considerations\n",
+       "- **Compute Resources**: LLMs can be resource-intensive. Evaluate if you have the necessary infrastructure or budget to support the computational demands.\n",
+       "- **Development and Maintenance**: Consider the costs associated with developing and maintaining an LLM solution, including potential model fine-tuning and updates.\n",
+       "\n",
+       "### 6. Ethical and Compliance Factors\n",
+       "- **Bias and Fairness**: LLMs can inadvertently perpetuate biases present in training data. Ensure that the solution includes measures to monitor and mitigate bias.\n",
+       "- **Data Privacy**: Evaluate compliance with data privacy regulations, especially if the solution involves processing sensitive information.\n",
+       "\n",
+       "### 7. Business Value\n",
+       "- **ROI**: Assess whether the LLM solution will deliver a tangible return on investment compared to alternative solutions.\n",
+       "- **Strategic Alignment**: Ensure that deploying an LLM aligns with your business goals and strategic initiatives.\n",
+       "\n",
+       "### Conclusion\n",
+       "To decide if a business problem is suitable for an LLM solution, weigh the above factors in the context of your specific use case. An LLM is most appropriate when the problem is text-heavy, requires sophisticated language understanding, and can justify the costs with significant business value. If the conditions align, an LLM can be a powerful tool to enhance your business operations."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Have it stream back results in markdown\n",
     "\n",
@@ -644,8 +731,152 @@
    "execution_count": null,
    "id": "c23224f6-7008-44ed-a57f-718975f4e291",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "846f4a091ec54f01acc771ee66a21b91",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "# # Load tokenizer and model\n",
+    "# model_name = \"tiiuae/falcon-7b\"\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "# model = AutoModelForCausalLM.from_pretrained(model_name, device_map=\"auto\")  # Uses GPU if available\n",
+    "\n",
+    "# # Test input\n",
+    "# input_text = \"What are the advantages of using open-source AI models?\"\n",
+    "# inputs = tokenizer(input_text, return_tensors=\"pt\").to(\"cuda\")  # Use \"cuda\" for GPU\n",
+    "# outputs = model.generate(inputs[\"input_ids\"], max_length=100)\n",
+    "\n",
+    "\n",
+    "# print(tokenizer.decode(outputs[0], skip_special_tokens=True))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "550c2b70-c79c-4941-ab6a-8452305b1e8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "You:  exit\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Goodbye!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "# Load the tokenizer and model\n",
+    "model_name = \"gpt2\"  # Replace with your desired model name\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name, device_map=\"auto\")\n",
+    "\n",
+    "# Chat loop\n",
+    "while True:\n",
+    "    user_input = input(\"You: \")\n",
+    "    if user_input.lower() in [\"exit\", \"quit\"]:\n",
+    "        print(\"Goodbye!\")\n",
+    "        break\n",
+    "    inputs = tokenizer(user_input, return_tensors=\"pt\").to(\"cpu\")\n",
+    "    outputs = model.generate(inputs[\"input_ids\"], max_length=100)\n",
+    "    print(f\"Model: {tokenizer.decode(outputs[0], skip_special_tokens=True)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e967b53f-4673-40d1-aea4-2f40fa6ac560",
+   "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9fbe8f97-1cb1-4395-9ef2-c22568c41256",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "# Load model and tokenizer\n",
+    "model_name = \"tiiuae/falcon-7b\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name, device_map=\"auto\")  # GPU support\n",
+    "\n",
+    "def generate_response(prompt):\n",
+    "    inputs = tokenizer(prompt, return_tensors=\"pt\").to(\"cpu\")  # Use \"cpu\" if no GPU\n",
+    "    outputs = model.generate(inputs[\"input_ids\"], max_length=200, do_sample=True, temperature=0.7)\n",
+    "    return tokenizer.decode(outputs[0], skip_special_tokens=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4538a8c2-f960-4aa2-9126-0fb5f38ec035",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Chatbot is ready! Type 'exit' to quit.\")\n",
+    "\n",
+    "while True:\n",
+    "    user_input = input(\"You: \")\n",
+    "    if user_input.lower() in [\"exit\", \"quit\"]:\n",
+    "        print(\"Goodbye!\")\n",
+    "        break\n",
+    "    response = generate_response(user_input)\n",
+    "    print(f\"Chatbot: {response}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1e817ab-dc47-43b3-8847-b5ddbb9c165c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gradio as gr\n",
+    "\n",
+    "def chatbot_interface(user_input, history=[]):\n",
+    "    history = history or []\n",
+    "    prompt = \" \".join([f\"User: {u} Bot: {b}\" for u, b in history]) + f\" User: {user_input}\"\n",
+    "    response = generate_response(prompt)\n",
+    "    history.append((user_input, response))\n",
+    "    return response, history\n",
+    "\n",
+    "iface = gr.Interface(\n",
+    "    fn=chatbot_interface,\n",
+    "    inputs=[\"text\", \"state\"],\n",
+    "    outputs=[\"text\", \"state\"],\n",
+    "    title=\"Open-Source GPT Chatbot\",\n",
+    "    description=\"Chat with an open-source GPT model.\",\n",
+    "    theme=\"compact\"\n",
+    ")\n",
+    "\n",
+    "iface.launch()\n"
+   ]
   }
  ],
  "metadata": {
