--- a/week2/day5.ipynb
+++ b/week2/day5.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8b50bbe2-c0b1-49c3-9a5c-1ba7efa2bcb4",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,8 @@
     "import json\n",
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
-    "import gradio as gr"
+    "import gradio as gr\n",
+    "import ollama"
    ]
   },
   {
@@ -49,7 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
+   "id": "ef21e46b-c16a-469b-8943-1f756086479b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL_LLAMA = 'llama3.2'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "0a521d84-d07c-49ab-a0df-d6451499ed97",
    "metadata": {},
    "outputs": [],
@@ -61,19 +72,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "61a2a15d-b559-4844-b377-6bd5cb4949f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7870\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7870/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# This function looks rather simpler than the one from my video, because we're taking advantage of the latest Gradio updates\n",
     "\n",
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
-    "    response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
-    "    return response.choices[0].message.content\n",
+    "    response = ollama.chat(model=MODEL, messages=messages)\n",
+    "    return response.message.content\n",
     "\n",
-    "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
+    "gr.ChatInterface(fn=chat, type=\"messages\").launch(inbrowser=True)"
    ]
   },
   {
@@ -94,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "0696acb1-0b05-4dc2-80d5-771be04f1fb2",
    "metadata": {},
    "outputs": [],
@@ -111,17 +152,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "80ca4e09-6287-4d3f-997d-fa6afbcf6c85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tool get_ticket_price called for tokyo\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'$1400'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "get_ticket_price(\"London\")"
+    "get_ticket_price(\"tokyo\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "4afceded-7178-4c05-8fa6-9f2085e6a344",
    "metadata": {},
    "outputs": [],
@@ -147,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "bdca8679-935f-4e7f-97e6-e71a4d4f228c",
    "metadata": {},
    "outputs": [],
@@ -173,56 +232,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "ce9b0744-9c78-408d-b9df-9f6fd9ed78cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
-    "    response = openai.chat.completions.create(model=MODEL, messages=messages, tools=tools)\n",
-    "\n",
-    "    if response.choices[0].finish_reason==\"tool_calls\":\n",
-    "        message = response.choices[0].message\n",
+    "    response = ollama.chat(model=MODEL_LLAMA, messages=messages, tools=tools)\n",
+    "  \n",
+    "    # Process tool calls if present\n",
+    "    if response.message.tool_calls:\n",
+    "        message = response.message\n",
     "        response, city = handle_tool_call(message)\n",
     "        messages.append(message)\n",
     "        messages.append(response)\n",
-    "        response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
-    "    \n",
-    "    return response.choices[0].message.content"
+    "        response = ollama.chat(model=MODEL_LLAMA, messages=messages)\n",
+    "      \n",
+    "\n",
+    "    return response.message.content"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "40952a10-3613-4487-84fb-a0216d1ba495",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "b0992986-ea09-4912-a076-8e5603ee631f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We have to write that function handle_tool_call:\n",
-    "\n",
     "def handle_tool_call(message):\n",
     "    tool_call = message.tool_calls[0]\n",
-    "    arguments = json.loads(tool_call.function.arguments)\n",
+    "    arguments = tool_call.function.arguments\n",
     "    city = arguments.get('destination_city')\n",
     "    price = get_ticket_price(city)\n",
     "    response = {\n",
     "        \"role\": \"tool\",\n",
-    "        \"content\": json.dumps({\"destination_city\": city,\"price\": price}),\n",
-    "        \"tool_call_id\": tool_call.id\n",
+    "        \"content\": json.dumps({\"destination_city\": city, \"price\": price}),\n",
+    "        \"tool_call_data\": str(tool_call) \n",
     "    }\n",
     "    return response, city"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "f4be8a71-b19e-4c2f-80df-f59ff2661f14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7872\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7872/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tool get_ticket_price called for \n"
+     ]
+    }
+   ],
    "source": [
-    "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
+    "gr.ChatInterface(fn=chat, type=\"messages\").launch(inbrowser=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b4a0db7-86d4-490d-93cb-1a28bbc15829",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
