--- a/week2/day4-Copy1.ipynb
+++ b/week2/day4-Copy1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "id": "8b50bbe2-c0b1-49c3-9a5c-1ba7efa2bcb4",
    "metadata": {},
    "outputs": [],
@@ -24,13 +24,12 @@
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "import gradio as gr\n",
-    "import ollama\n",
-    "from IPython.display import Markdown, display, update_display"
+    "import ollama"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "747e8786-9da8-4342-b6c9-f5f69c2e22ae",
    "metadata": {},
    "outputs": [
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "f55b0c0c-d903-401b-a6d1-25708822ab50",
    "metadata": {},
    "outputs": [],
@@ -76,29 +75,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "0a521d84-d07c-49ab-a0df-d6451499ed97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# system message\n",
-    "system_message = (\n",
-    "    \"You are a helpful financial assistant for Eclectics Bank Kenya. \"\n",
-    "    \"Your role is to provide accurate and concise answers, no more than 1 sentence, \"\n",
-    "    \"to assist customers with inquiries about loans, overdrafts, credit scores, and other banking services. \"\n",
-    "    \"Always maintain a polite and professional tone, ensuring your replies are easy to understand. \"\n",
-    "    \"If you don't know the answer, say so and suggest contacting customer service for further assistance and remember to use Kenya shilling Currency.\\n\\n\"\n",
-    "    \"Examples:\\n\"\n",
-    "    \"- If asked about loans: 'Eclectics Bank offers a variety of loans with competitive rates, including personal, business, and education loans. Please specify your needs for more details.'\\n\"\n",
-    "    \"- If asked about overdrafts: 'Our overdraft facility helps manage cash flow gaps with dynamic eligibility thresholds based on your account activity.'\\n\"\n",
-    "    \"- If asked about credit scores: 'A good credit score is key to better loan terms. You can improve it by timely payments and reducing debt.'\\n\\n\"\n",
-    "    \"Encourage customers to explore Eclectics Bank’s offerings, such as dynamic loan limits, overdrafts, and financial tools tailored to their needs.\"\n",
-    ")\n"
+    "system_message = \"You are a helpful assistant for an Saasy Airline. \"\n",
+    "system_message += \"Give short, courteous answers, no more than 1 sentence. \"\n",
+    "system_message += \"Always be accurate. If you don't know the answer, say so.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
+   "id": "61a2a15d-b559-4844-b377-6bd5cb4949f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # This function looks rather simpler than the one from my video, because we're taking advantage of the latest Gradio updates\n",
+    "\n",
+    "# def chat(message, history):\n",
+    "#     messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
+    "#     response = ollama.chat(model=MODEL_LLAMA, messages=messages)\n",
+    "#     return response.message.content\n",
+    "\n",
+    "# gr.ChatInterface(fn=chat, type=\"messages\").launch(inbrowser=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "d51dc97a-e18f-448d-b83a-b45795ee738b",
    "metadata": {},
    "outputs": [
@@ -106,7 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7891\n",
+      "* Running on local URL:  http://127.0.0.1:7875\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -114,7 +120,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7891/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7875/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -127,7 +133,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 48,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +146,7 @@
     "    response = openai.chat.completions.create(model=MODEL_GPT, messages=messages)\n",
     "    return response.choices[0].message.content\n",
     "\n",
-    "gr.ChatInterface(fn=chat, type=\"messages\",  title=\"Banking Assistant Chatbot\").launch(inbrowser=True)"
+    "gr.ChatInterface(fn=chat, type=\"messages\").launch(inbrowser=True)"
    ]
   },
   {
